# vulkan-mini-libs-2

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
data/: cleanup_excludes.yaml  compare_excludes.yaml  vk_verified_voids.txt
example/: CMakeLists.txt  error_code.cpp  result_to_string.cpp  standalone.c  standalone.cpp  string_parsing.cpp
include/: vk_error_code.hpp  vk_result_to_string.h  vk_struct_cleanup.h  vk_struct_compare.h  vk_value_serialization.h  vk_value_serialization.hpp  xr_result_to_string.h
test/: CMakeLists.txt  c_compilation.c  cpp_compilation.cpp  error_code.cpp  parsing.cpp  serialization.cpp  serialization64.cpp  underlying_type_check.cpp
tools/: common_header.txt  gen_common.py  generate.sh  generate_cleanup_header.py  generate_comparison_header.py  generate_comparison_headers.py  generate_error_code_header.py  generate_result_string_header.py  generate_serialization_header.py  parse_vk_doc.py  parse_xml.py
